@@ -1,4 +1,5 @@
 0.0.6
+Mount device from location box with /dev/xxx.
 Dropping text now creates a new file containing the dropped text.
 Search now wraps both backwards and forwards.
 Got rid of annoying gtk warnings when searching.
